src/test/ui/feature-gates/feature-gate-async-await-2015-edition.stderr
error[E0670]: `async fn` is not permitted in the 2015 edition
  --> $DIR/feature-gate-async-await-2015-edition.rs:3:1
   |
LL | async fn foo() {}
   | ^^^^^

error[E0422]: cannot find struct, variant or union type `async` in this scope
  --> $DIR/feature-gate-async-await-2015-edition.rs:7:13
   |
LL |     let _ = async {};
   |             ^^^^^ not found in this scope

error[E0425]: cannot find value `async` in this scope
  --> $DIR/feature-gate-async-await-2015-edition.rs:8:13
   |
LL |     let _ = async || { true };
   |             ^^^^^ not found in this scope

error[E0658]: async fn is unstable
  --> $DIR/feature-gate-async-await-2015-edition.rs:3:1
   |
LL | async fn foo() {}
   | ^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/50547
   = help: add #![feature(async_await)] to the crate attributes to enable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0422, E0425, E0658, E0670.
For more information about an error, try `rustc --explain E0422`.
